projects/15-analyze-research/01-visiable-monitering/04-CloudWatch-ServiceLens/02-terraform/modules/vpc/nacl.tf
# NACLリソース定義
resource "aws_network_acl" "public" {
  vpc_id     = aws_vpc.analyze_research.id
  subnet_ids = [aws_subnet.public_1.id]
  tags = {
    Name = var.nacl_name
  }
}

resource "aws_network_acl_rule" "public_inbound" {
  network_acl_id = aws_network_acl.public.id
  rule_number    = 100
  egress         = false
  protocol       = "-1"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
}

resource "aws_network_acl_rule" "public_outbound" {
  network_acl_id = aws_network_acl.public.id
  rule_number    = 100
  egress         = true
  protocol       = "-1"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
}
